src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__validate_call_by_ref_explicit.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E031]: Expected a reference for parameter byRefInOut because their type is InOut
   ┌─ <internal>:23:49
   │
23 │             func(byValInput := 1, byRefInOut := 2, byRefOutput =>  );
   │                                                 ^ Expected a reference for parameter byRefInOut because their type is InOut

error[E031]: Expected a reference for parameter byRefInOut because their type is InOut
   ┌─ <internal>:25:49
   │
25 │             func(byValInput := 1, byRefInOut := 2, byRefOutput => 3);
   │                                                 ^ Expected a reference for parameter byRefInOut because their type is InOut

error[E031]: Expected a reference for parameter byRefOutput because their type is Output
   ┌─ <internal>:25:67
   │
25 │             func(byValInput := 1, byRefInOut := 2, byRefOutput => 3);
   │                                                                   ^ Expected a reference for parameter byRefOutput because their type is Output

error[E031]: Expected a reference for parameter byRefInOut because their type is InOut
   ┌─ <internal>:26:49
   │
26 │             func(byValInput := 1, byRefInOut := 2, byRefOutput => x);
   │                                                 ^ Expected a reference for parameter byRefInOut because their type is InOut

error[E031]: Expected a reference for parameter byRefOutput because their type is Output
   ┌─ <internal>:27:67
   │
27 │             func(byValInput := 1, byRefInOut := x, byRefOutput => 3);
   │                                                                   ^ Expected a reference for parameter byRefOutput because their type is Output
